# OpenGL

./: .gitattributes  .gitignore  CMakeLists.txt  G.sln  G.vcxproj  G.vcxproj.filters  LICENSE  README.md
Dependencies/include/headers/: glfwIO.hpp  gui.hpp  opengl.hpp  time.hpp  triangulated_mesh.hpp
Dependencies/include/headers/camera/: camera_s.h  camera_s.hpp
Dependencies/include/headers/shader/: shader_s.hpp
G/: CMakeLists.txt  G.vcxproj  G.vcxproj.filters  fragmentShader.glsl  main.cpp  resource.h
G/Dependencies/lib/: glfw3dll.exp
G/headers/: shader_s.h
G/headers/shader/: shader_s.cpp  shader_s.h
G/shader/: f.glsl  fragmentShader.glsl  vertexShader.glsl
G/src/headers/camera/: camera_s.cpp
G/src/shader/: v.glsl
LICENSES/: portable-file-dialogs.txt
modules/camera/headers/: camera_s.hpp
modules/camera/implementation/: camera_s.cpp
modules/input/headers/: glfwIO.hpp
modules/input/implementation/: glfwIO.cpp
modules/objectloader/headers/: triangulated_mesh.hpp
modules/objectloader/implementation/: triangulated_mesh.cpp
modules/opengl/headers/: opengl.hpp
modules/opengl/implementation/: opengl_camera.cpp  opengl_state.cpp  opengl_utility.cpp
modules/shader/headers/: shader_s.hpp
modules/shader/implementation/: shader_s.cpp
modules/timing/headers/: time.hpp
modules/timing/implementation/: time.cpp
modules/ui/headers/: gui.hpp
modules/ui/implementation/: gui.cpp
src/: glad.c  main.cpp  test  test.cpp
src/implementation/: camera_s.cpp  glfwIO.cpp  gui.cpp  opengl_camera.cpp  opengl_state.cpp  opengl_utility.cpp  shader_s.cpp  triangulated_mesh.cpp
src/shader/: f1.glsl  f2.glsl  v1.glsl  v2.glsl
